--- a/CSS/playground.css
+++ b/CSS/playground.css
@@ -53,6 +53,7 @@
 @media only screen and (max-width: 450px) {   
     .intro-subtitle {
         font-size: var(--font-size-xs);
+        line-height: .8;
         margin: 0;
     }
 }
