--- a/CSS/style.css
+++ b/CSS/style.css
@@ -802,7 +802,7 @@ input:checked+.slider:before {
 
 .content-header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 .remove {
@@ -830,6 +830,10 @@ input:checked+.slider:before {
 .topic-body {
     padding: 5px 0;
     color: var(--card-bottom-text);
+}
+
+.topic-body p:nth-child(1) {
+    font-size: var(--font-size-small);
 }
 
 .m-1-content.active {
@@ -1010,10 +1014,7 @@ footer p a:hover {
         color: var(--bold-text);
         font-weight: 700;
     }
-    .sub-card {
-        width: 90%;
-        margin: 0 0 40px 0;
-    }
+    
     .vercel-logo img {
         height: 12px;
     }
@@ -1086,4 +1087,16 @@ footer p a:hover {
         width: 70%;
         justify-content: flex-end;
     }
+}
+
+.parent {
+    display: flex;
+    flex-direction: column;
+}
+
+.parent input {
+    background: none;
+    border: none;
+    width: 100px;
+    border-bottom: 1px solid black;
 }
