--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,7 +142,7 @@
     --footer-bg: #252422;
     
     --title1: #b91616;
-    --title2: #ce380f;
+    --title2: #f5f5f5;
 
     --primary-bg: #1b1b1b;
     --secondary-bg: #1a1a1bfb;
