--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,7 +141,7 @@
     --color9: #a72e0d;
     --footer-bg: #252422;
     
-    --title1: #500808;
+    --title1: #ea9a06;
     --title2: #f5f5f5;
 
     --primary-bg: #1b1b1b;
