--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,23 +11,23 @@
 }
 
 /* Set the initial width of the scrollbar */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 7px;
     height: 5px;
     transition: width 0.5s ease-in-out;
-} */
+}
 /* Add transition effect */
 
 /* Style the scrollbar thumb */
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: var(--primary-color);
     border-radius: 10px;
-} */
+}
 
 /* Adjust the width of the scrollbar thumb on hover */
-/* ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     width: 10px;
-} */
+}
 /* Set the width to 10 pixels */
 
 :root {
@@ -48,7 +48,7 @@
     --secondary-text: #131313eb;
     --primary-color: #fa821f;
     --secondary-color: #ff7b47;
-    
+
     --fade-text: #222222e1;
 
     --primary-linear: linear-gradient(83.21deg, #ff6302 0%, #fbff01 100%);
@@ -69,7 +69,7 @@
     --color7: #ffbf2b;
     --color8: #ea9a06;
     --color9: #a72e0d;
-    
+
     --title1: #F88820;
     --title2: #252422;
 
@@ -140,7 +140,7 @@
     --color8: #ea9a06;
     --color9: #a72e0d;
     --footer-bg: #252422;
-    
+
     --title1: #ea9a06;
     --title2: #f5f5f5;
 
@@ -308,7 +308,7 @@ input:checked+.slider:before {
         width: 40px;
         transition: var(--gen-transition);
     }
-    
+
     .nav-logo img {
         height: 40px;
         filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.3))
@@ -342,7 +342,7 @@ input:checked+.slider:before {
         transition: .8s cubic-bezier(0.52, 0.89, 0, 1.01);
         z-index: var(--layer-4);
     }
-    
+
     .nav-menu.active {
         left: 0;
         padding: 5% 2% 15% 2%;
@@ -353,7 +353,7 @@ input:checked+.slider:before {
         margin: 0;
         vertical-align: middle;
     }
-    
+
     .nav-link {
         font-size: var(--font-size-xs);
         color: var(--secondary-text);
@@ -521,7 +521,7 @@ input:checked+.slider:before {
 
 .circle {
     position: absolute;
-    --radial-grad: radial-gradient( #000000b3, transparent 70%);
+    --radial-grad: radial-gradient(#000000b3, transparent 70%);
     top: 50%;
     left: 50%;
     height: 100%;
@@ -531,7 +531,7 @@ input:checked+.slider:before {
     opacity: 0.4;
     overflow: hidden;
     z-index: -1;
-    
+
     background: url(images/noise.webp) repeat, var(--primary-linear);
     -webkit-mask-image: var(--radial-grad);
     mask-image: var(--radial-grad);
@@ -542,7 +542,8 @@ input:checked+.slider:before {
     overflow: hidden;
 }
 
-.page_b, .page_c {
+.page_b,
+.page_c {
     display: block;
     height: auto;
 }
@@ -604,6 +605,11 @@ input:checked+.slider:before {
 }
 
 .page_c {
+    height: auto;
+    margin: 100px 0;
+}
+
+.page_d {
     height: auto;
     margin: 100px 0;
 }
@@ -800,7 +806,7 @@ input:checked+.slider:before {
     background: none;
 }
 
-.m-1-content, 
+.m-1-content,
 .m-2-content,
 .t-1-content,
 .t-2-content,
@@ -812,8 +818,7 @@ input:checked+.slider:before {
 .th-2-content,
 .f-1-content,
 .f-2-content,
-.sat-1-content
-{
+.sat-1-content {
     display: none;
 }
 
@@ -829,13 +834,12 @@ input:checked+.slider:before {
 .th-2-content.active,
 .f-1-content.active,
 .f-2-content.active,
-.sat-1-content.active
-{
+.sat-1-content.active {
     display: block;
     position: absolute;
     top: 0%;
     left: 0%;
-    
+
     transition: ease-in-out .2s;
     height: 100%;
     width: 100%;
@@ -930,7 +934,7 @@ footer {
     background: var(--footer-bg);
     padding: 10px;
     transition: var(--gen-transition);
-    
+
 }
 
 footer p {
@@ -1006,13 +1010,16 @@ footer p a:hover {
         font-size: 1;
     } */
 }
+
 @media only screen and (max-width: 768px) {
     .section-divider {
         display: block;
     }
+
     .intro-subtitle1 P {
         font-size: var(--font-size-h2);
     }
+
     .intro-subtitle2 p {
         font-size: var(--font-size-xs);
         line-height: .9;
@@ -1026,10 +1033,11 @@ footer p a:hover {
     /* .fa {
         margin-right: 5px;
     } */
-    
+
     .page_b_title p {
         font-size: var(--font-size-h6);
     }
+
     .page_c_title p {
         font-size: var(--font-size-h6);
     }
@@ -1054,7 +1062,9 @@ footer p a:hover {
         z-index: 4;
     }
 }
+
 @media only screen and (max-width: 600px) {}
+
 @media only screen and (max-width: 450px) {
     .vercel-text p {
         font-size: var(--font-size-xxs);
@@ -1062,7 +1072,7 @@ footer p a:hover {
         color: var(--bold-text);
         font-weight: 700;
     }
-    
+
     .vercel-logo img {
         height: 12px;
     }
@@ -1071,27 +1081,31 @@ footer p a:hover {
         font-size: var(--font-size-h3);
     }
 }
+
 @media only screen and (max-width: 426px) {}
+
 @media only screen and (max-width: 375px) {
     .intro-title {
         font-size: var(--font-size-h5);
     }
+
     .intro-subtitle2 p {
         font-size: var(--font-size-xs);
         margin: 0;
     }
+
     .page_b_title p,
-    .page_c_title p
-    {
+    .page_c_title p {
         font-size: var(--font-size-large);
     }
+
     .sched-header p {
         font-size: var(--font-size-medium);
     }
+
     .sub-card-top .sub-card-top-left p,
     .sub-card-bottom .sub-card-bottom-left,
-    .btnn
-    {
+    .btnn {
         font-size: var(--font-size-xxs);
     }
 
@@ -1107,34 +1121,40 @@ footer p a:hover {
         padding: 0 10px;
     }
 }
+
 @media only screen and (max-width: 320px) {
     .intro-title {
         font-size: var(--font-size-h5);
     }
+
     .intro-subtitle2 {
         font-size: var(--font-size-xs);
         margin: 0;
     }
+
     .page_b_title p,
-    .page_c_title p
-    {
+    .page_c_title p {
         font-size: var(--font-size-large);
     }
+
     .sched-header p {
         font-size: var(--font-size-medium);
     }
+
     .sub-card-top .sub-card-top-left p,
     .sub-card-bottom .sub-card-bottom-left,
-    .btnn
-    {
+    .btnn {
         font-size: var(--font-size-xxs);
     }
+
     .sub-card-top-right img {
         opacity: .6;
     }
+
     .developer {
         width: 30%;
     }
+
     .vercel {
         width: 70%;
         justify-content: flex-end;
