--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,7 +41,9 @@
     --Tektur-font: 'Tektur', cursive;
 
     --card-text: #fefefe;
+    --card-bottom-bg: #fefefe;
     --card-bottom-text: #252422;
+    --card-active-text: #252422;
     --text-color: #262626;
     --active-text: #252422;
     --bold-text: #000;
@@ -119,7 +121,9 @@
     --cardbg: url(/images/waves.png);
 
     --text-color: #fdfdfded;
+    --card-bottom-bg: #f5f5f5;
     --active-text: #ffffff;
+    --card-active-text: #242522;
     --bold-text: #fff;
     --secondary-text: #fffffff8;
     --primary-color: #00bfff;
@@ -460,9 +464,11 @@ input:checked+.slider:before {
     font-style: italic;
     font-weight: 700;
     color: var(--title2);
+    transition: var(--gen-transition);
 }
 
 .intro-subtitle1 p:nth-child(2) {
+    transition: var(--gen-transition);
     font-size: var(--font-size-xs);
 }
 
@@ -479,6 +485,7 @@ input:checked+.slider:before {
     font-family: var(--title-font);
     font-weight: 600;
     font-style: italic;
+    transition: var(--gen-transition);
 }
 
 .intro-subtitle2 p span {
@@ -543,7 +550,8 @@ input:checked+.slider:before {
 }
 
 .page_b,
-.page_c {
+.page_c,
+.page_d {
     display: block;
     height: auto;
 }
@@ -627,6 +635,48 @@ input:checked+.slider:before {
     color: #F08000;
 }
 
+.page_d_title {
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
+}
+
+.page_d_title p {
+    font-family: var(--title-font);
+    font-size: var(--font-size-h5);
+    font-style: italic;
+    font-weight: 700;
+    text-align: center;
+    color: #F08000;
+}
+
+.page_d_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+    /* height: auto; */
+}
+
+.student-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 5px;
+}
+
+.student-images .img img {
+    max-height: 200px;
+    max-width: 200px;
+    border-radius: .5em;
+    opacity: 0.8;
+    transition: all 0.2s cubic-bezier(0.2, 0.53, 0, 1);
+}
+
+.student-images .img img:hover {
+    opacity: 1;
+    transform: scale(1.2) rotate(-2deg);
+}
+
 .sched-grid {
     position: relative;
     display: flex;
@@ -659,6 +709,7 @@ input:checked+.slider:before {
     font-size: var(--font-size-large);
     font-family: var(--title-font);
     font-weight: 700;
+    transition: var(--gen-transition);
 }
 
 .sub-card {
@@ -729,6 +780,7 @@ input:checked+.slider:before {
     padding: 20px;
     display: block;
     color: var(--card-text);
+    transition: var(--gen-transition);
     z-index: 3;
 }
 
@@ -746,6 +798,7 @@ input:checked+.slider:before {
 .schedule {
     font-size: var(--font-size-xxs);
     font-weight: 400;
+    transition: var(--gen-transition);
 }
 
 .schedule {
@@ -753,6 +806,7 @@ input:checked+.slider:before {
 }
 
 .sub-card-top-left p span {
+    transition: var(--gen-transition);
     font-weight: 600;
 }
 
@@ -771,7 +825,8 @@ input:checked+.slider:before {
 
 .sub-card-top-right img {
     height: 100px;
-    opacity: .8;
+    opacity: .5;
+    transition: var(--gen-transition);
 }
 
 .sub-card-bottom {
@@ -779,7 +834,7 @@ input:checked+.slider:before {
     justify-content: center;
     align-items: center;
     height: 30%;
-    background: var(--card-text);
+    background: var(--card-bottom-bg);
 }
 
 .sub-card-bottom-left {
@@ -787,6 +842,7 @@ input:checked+.slider:before {
     width: 70%;
     text-align: left;
     padding: 0 20px;
+    transition: var(--gen-transition);
 }
 
 .sub-card-bottom-left span {
@@ -843,7 +899,7 @@ input:checked+.slider:before {
     transition: ease-in-out .2s;
     height: 100%;
     width: 100%;
-    padding: 20px;
+    padding: 15px;
     border-radius: 5px;
     background: #f5f5f5;
     z-index: 4;
@@ -865,23 +921,30 @@ input:checked+.slider:before {
 
 .remove:hover {
     color: red;
-    transform: rotate(180deg);
+    transform: rotate(90deg);
 }
 
 .content-body {
     display: flex;
     align-items: space-evenly;
     flex-direction: column;
-    height: 100%;
+    height: 90%;
+    /* overflow: hidden; */
+    overflow-x: auto;
 }
 
 .module-body,
-.topic-body {
-    padding: 5px 0;
-    color: var(--card-bottom-text);
+.topic-body,
+.content-header p {
+    /* padding: 5px 0; */
+    color: var(--card-active-text);
 }
 
-.topic-body p:nth-child(1) {
+/* .topic-body {
+    overflow: hidden;
+} */
+
+.content-header p:nth-child(1) {
     font-size: var(--font-size-small);
 }
 
@@ -890,9 +953,19 @@ input:checked+.slider:before {
     flex-direction: column;
 }
 
+.topic-list {
+    overflow: hidden;
+}
+
 .module-item a,
 .topic-item {
     font-size: var(--font-size-xxs);
+}
+
+.topic-item {
+    overflow: hidden;
+    overflow-x: auto;
+    overflow-wrap: anywhere;
 }
 
 .module-item a {
@@ -1012,14 +1085,24 @@ footer p a:hover {
 }
 
 @media only screen and (max-width: 768px) {
+
+    .page_d_container .student-images .img img {
+        max-height: 150px;
+        max-width: 150px;
+    }
+
     .section-divider {
         display: block;
     }
 
+    .intro-title p,
     .intro-subtitle1 P {
         font-size: var(--font-size-h2);
     }
 
+    .intro-title p:nth-child(2) {
+        font-size: var(--font-size-medium);
+    }
     .intro-subtitle2 p {
         font-size: var(--font-size-xs);
         line-height: .9;
@@ -1038,7 +1121,8 @@ footer p a:hover {
         font-size: var(--font-size-h6);
     }
 
-    .page_c_title p {
+    .page_c_title p,
+    .page_d_title p {
         font-size: var(--font-size-h6);
     }
 
@@ -1063,7 +1147,11 @@ footer p a:hover {
     }
 }
 
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
+    .intro-title p {
+        font-size: var(--font-size-h3);
+    }
+}
 
 @media only screen and (max-width: 450px) {
     .vercel-text p {
@@ -1080,22 +1168,47 @@ footer p a:hover {
     .intro-title p {
         font-size: var(--font-size-h3);
     }
+
+    .intro-title p:nth-child(2) {
+        font-size: var(--font-size-medium);
+    }
 }
 
-@media only screen and (max-width: 426px) {}
+@media only screen and (max-width: 426px) {
+
+    .intro-text {
+        width: 100%;
+    }
+    
+    .sub-card-top-left {
+        padding: 10px;
+    }
+
+    .sub-card-bottom-left {
+        padding: 0 10px;
+    }
+
+    .intro-title p,
+    .intro-subtitle1 P {
+        font-size: var(--font-size-h4);
+    }
+    .intro-title p:nth-child(2) {
+        font-size: var(--font-size-small);
+    }
+    .intro-subtitle2 p {
+        font-size: var(--font-size-xxs);
+        margin: 0;
+    }
+}
 
 @media only screen and (max-width: 375px) {
     .intro-title {
         font-size: var(--font-size-h5);
     }
 
-    .intro-subtitle2 p {
-        font-size: var(--font-size-xs);
-        margin: 0;
-    }
-
     .page_b_title p,
-    .page_c_title p {
+    .page_c_title p,
+    .page_d_title p {
         font-size: var(--font-size-large);
     }
 
@@ -1104,6 +1217,7 @@ footer p a:hover {
     }
 
     .sub-card-top .sub-card-top-left p,
+    .sub-card-top .sub-card-top-left p span,
     .sub-card-bottom .sub-card-bottom-left,
     .btnn {
         font-size: var(--font-size-xxs);
@@ -1114,7 +1228,7 @@ footer p a:hover {
     }
 
     .sub-card-top-left {
-        padding: 10px 5px;
+        padding: 10px;
     }
 
     .sub-card-bottom-left {
@@ -1123,6 +1237,11 @@ footer p a:hover {
 }
 
 @media only screen and (max-width: 320px) {
+    .page_d_container .student-images .img img {
+        max-height: 130px;
+        max-width: 130px;
+    }
+
     .intro-title {
         font-size: var(--font-size-h5);
     }
@@ -1133,7 +1252,8 @@ footer p a:hover {
     }
 
     .page_b_title p,
-    .page_c_title p {
+    .page_c_title p,
+    .page_d_title p {
         font-size: var(--font-size-large);
     }
 
